# so-projekt-fabryka-czekolady

./: .gitignore  CMakeLists.txt  README.md  plan.md
include/: Supervisor.cpp  Supervisor.h
include/actors/: Deliverer.cpp  Deliverer.h  IRunnable.h  LogCollector.cpp  LogCollector.h  Process.h  Supervisor.cpp  Supervisor.h  Worker.cpp  Worker.h
include/ipcs/: FIFO.h  MessageQueue.cpp  MessageQueue.h  Semaphore.cpp  Semaphore.h  SharedMemory.cpp  SharedMemory.h  key.h
include/logger/: IQueue.h  Logger.cpp  Logger.h  MockQueue.h
include/objects/: IItem.h  Item.cpp  Item.h  ItemTemplate.cpp  ItemTemplate.h  Message.cpp  Message.h  Recipe.cpp  Recipe.h  SharedVector.cpp  SharedVector.h  item.cpp  item.h
include/processes/: ProcessController.cpp  ProcessController.h  ProcessStats.cpp  ProcessStats.h  runners.h
include/services/: DelivererService.cpp  DelivererService.h  LoggerService.cpp  LoggerService.h  WarehouseService.cpp  WarehouseService.h  WorkerService.cpp  WorkerService.h
include/stations/: IWarehouse.h  Warehouse.cpp  Warehouse.h  WarehouseStats.h  Workstation.cpp  Workstation.h  warehouse.cpp  warehouse.h
include/ui/: ControlPanel.cpp  ControlPanel.h  Dashboard.cpp  Dashboard.h  DelivererTable.cpp  DelivererTable.h  Layout.cpp  Layout.h  LogPanel.cpp  LogPanel.h  Logs.cpp  Logs.h  WarehouseTable.cpp  WarehouseTable.h  WorkerTable.cpp  WorkerTable.h
logging/: logger.cpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  Deliverer.cpp  StopChained.cpp  StopDeliverers.cpp  StopWarehouses.cpp  StopWorkers.cpp  Supervisor.cpp  Worker.cpp
tests/_old/: Supervisor.cpp
tests/_old/actors/: Deliverer.cpp  LogCollector.cpp
tests/_old/ipcs/: MessageQueue.cpp  Semaphore.cpp
tests/_old/objects/: ItemTemplate.cpp  Recipe.cpp
tests/_old/services/: WarehouseService.cpp  WorkerService.cpp
tests/_old/utils/: test_name.h
tests/actors/: Deliverer.cpp  LogCollector.cpp  Worker.cpp
tests/helpers/: MockQueue.h
tests/ipcs/: MessageQueue.cpp  Semaphore.cpp  SharedMemory.cpp
tests/objects/: Item.cpp  SharedVector.cpp
tests/services/: DelivererService.cpp  WarehouseService.cpp  WorkerService.cpp
tests/stations/: Warehouse.cpp
tests/utils/: run_once.h  test_name.h
